# Aule-Attention

./: .gitignore  CLAUDE.md  COMPARISON_AULE_VS_LLAMACPP.md  FIX_BLOCKY_NOISE_ISSUE.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  README.md  SECURITY.md  benchmark_aule_vs_llamacpp.py  build.zig  build.zig.zon  demo_gpt2_patch.py  demo_model.py  demo_patch_clean.py  deploy_mi300x.sh  docs.md  microbenchmark_overhead.py  test_causal_bug.py  test_comfy_issue.py  test_fix_verification.py  test_hybrid_mi300x.sh  test_llamacpp_vulkan.sh  test_real_ml_workflows.py  verify_comfy_headless.py
notebooks/: aule_mi300x_demo.ipynb
python/: README.md  aule.py  aule_autograd.py  aule_ck.py  aule_fast.py  aule_hybrid.py  aule_opencl_persistent.py  aule_opencl_tiled.py  aule_rocm.py  aule_unified.py  aule_wavefront.py  benchmark.py  comfy_entry.py  pyproject.toml  test_dual_strategy.py  test_llama_aule.py  test_pytorch.py
python/aule/: __init__.py  autograd.py  comfy_node.py  hip.py  hip_mfma.py  opencl.py  patching.py  triton_flash.py  triton_flash_amd.py  unified.py  vulkan.py
python/tests/: __init__.py  conftest.py  test_cpu.py  test_vulkan.py
scripts/: MI300X_SETUP.md  deploy_vulkan_mi300x.sh  fix_mi300x_firmware.sh  setup_rocm_mi300x.sh  test_llama_mi300x.sh  test_mi300x_options.sh
shaders/: attention_backward_f32.comp  attention_f16.comp  attention_f16_amd.comp  attention_f32.comp  attention_f32_amd.comp  attention_f32_fast.comp  attention_forward_f32.comp  attention_gravity.comp  attention_paged.comp  compile.sh  compile_all.sh  copy_kv_to_paged.comp  iota.comp  magnitude_sort.comp  radix_count.comp  radix_scan.comp  radix_scatter.comp  spatial_sort.comp  test.comp
src/: attention_backward_pipeline.zig  attention_gpu.zig  attention_pipeline.zig  attention_ref.zig  block_pool.zig  block_table.zig  buffer_manager.zig  compute_pipeline.zig  copy_kv_pipeline.zig  gpu_tensor.zig  gravity_pipeline.zig  lib.zig  paged_attention_pipeline.zig  sort_pipeline.zig  vulkan_context.zig
tests/: benchmark_attention.zig  benchmark_mi300x.py  test_attention.zig  test_block_pool.zig  test_comfy_sim.py  test_cross_attn.py  test_datacenter_detection.py  test_gqa_unit.py  test_gravity_attention.py  test_llm_aule.py  test_multiply.zig  test_needle.py  test_rope_unit.py  (+8 more)
(+7 files in other folders)
