[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aule-attention"
version = "0.1.0"
description = "Hardware-agnostic FlashAttention implementation - works on AMD, NVIDIA, Intel, Apple via Vulkan/OpenCL"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aule Technologies", email = "contact@aule.dev"}
]
keywords = [
    "attention",
    "flashattention",
    "transformer",
    "deep-learning",
    "gpu",
    "amd",
    "rocm",
    "vulkan",
    "opencl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
opencl = ["pyopencl>=2022.1"]
torch = ["torch>=1.12.0"]
full = ["pyopencl>=2022.1", "torch>=1.12.0"]
dev = [
    "pytest>=6.0",
    "pytest-benchmark",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/aule-technologies/aule-attention"
Documentation = "https://github.com/aule-technologies/aule-attention#readme"
Repository = "https://github.com/aule-technologies/aule-attention"
Issues = "https://github.com/aule-technologies/aule-attention/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aule*"]

[tool.setuptools.package-data]
aule = ["lib/*.so", "lib/*.dll", "lib/*.dylib"]

# Include lib directory in package
[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
